api-reference/rest-apis/v1/workspace/delete-domain.mdx
---
title: "Delete workspace domains (v1)"
description: "Remove allowed domains from your Velt workspace using the v1 REST API. Revoke a domain's ability to authenticate against your Velt workspace."
api: "POST https://api.velt.dev/v1/workspace/domains/delete"
---

Use this API to add new organizations and its metadata.

# Endpoint

`POST https://api.velt.dev/v1/workspace/domains/delete`

# Headers

<ParamField header="x-velt-api-key" type="string" required>
  Your API key.
</ParamField>

<ParamField header="x-velt-auth-token" type="string" required>
  Your [Auth Token](/security/auth-tokens).
</ParamField>

# Body

#### Params

<ParamField body="data" type="object" required>
  <Expandable title="properties">
    <ParamField body="domains" type="string[]" required>
      Array of domains
    </ParamField>
  </Expandable>
</ParamField>

# Example Request

```JSON
{
  "data": {
     "domains" : [
        "https://www.google.com",
        "https://*.firebase.com"
     ]
  }
}
```

# Example Response

#### Success Response

```JSON
{
    "result": {
        "status": "success",
        "message": "Domain(s) removed successfully from allowed domains.",
        "data": {
            "domainsRemoved": [
                "google.com",
                "*.firebase.com"
            ]
        }
    }
}
```

#### Failure Response
##### If some domains are not in the allowed domains
```JSON
{
    "error": {
        "details": {
            "domainsRemoved": [
                "velt.dev"
            ],
            "skippedDomains": [
                "google.com"
            ]
        },
        "message": "Domain(s) removed successfully from allowed domains. Skipped non-existing domains.",
        "status": "INTERNAL"
    }
}
```

<ResponseExample>
```js
{
    "result": {
        "status": "success",
        "message": "Domain(s) removed successfully from allowed domains.",
        "data": {
            "domainsRemoved": [
                "google.com",
                "*.firebase.com"
            ]
        }
    }
}
```
</ResponseExample>